css/muv-style-2.css
/* ... */
.info-container,
.info-container-2,
.info-container-3,
.info-container-4 {
  width: 100%;

  /* Change max-width to position correctly on smalller screen with @media */
  max-width: 65%;
  max-height: auto;

  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.info-container-2 {
  max-width: 50%;
}

.info-container-3 {
  max-width: 80%;
}

.info-container-4 {
  max-width: 35%;
}
.wide-container {
  max-width: 100vw;
}

#letter_info_container_2 {
  text-align: left;
}

.half_grid,
#vehicle_half_grid,
#button_half_grid {
  display: grid;
  grid-template-rows: auto;
  grid-gap: 5px;

  justify-content: center;
  align-content: center;
}

.half_grid,
#vehicle_half_grid {
  grid-template-columns: repeat(2, 1fr);
}

#button_half_grid {
  justify-content: start;
}

#button_content_right {
  grid-column-start: 2;
  grid-row-start: 1;
  justify-self: start;
  align-self: end;
}

#pay_grid {
  grid-template-columns: repeat(2, 1fr);
  justify-content: start;
  align-content: start;
  text-align: left;
  margin-top: 3%;
  column-gap: 5%;
}

#labour_half_grid {
  grid-template-columns: repeat(2, 1fr);
  column-gap: 5em;
}

#pay_grid_content_right {
  align-self: start;
}

#pay_grid_content_text {
  align-self: center;
}

#pay_grid_content_img img {
  width: 100%;
  height: auto;
}

.specs_title_grid,
.specs_body_grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, auto);
  row-gap: 10px;
  align-content: start;
  text-align: left;
}

.specs_body_grid {
  row-gap: 20px;
  column-gap: 30px;
}

.specs_body_grid .carousel,
.specs_body_footer {
  grid-column-start: span 2;
}

#specs_chart_title {
  grid-row: 1;
}

#specs_title {
  float: left;
  margin-top: 0px;
  grid-row: 2;
}

#specs_select {
  justify-self: end;
  align-self: center;
  grid-row: 2;
}

/* #vehicle_half_grid {
  grid-template-columns: repeat(2, auto);
  margin-top: 10%;
  align-items: center;
} */

#vehicle_half_grid img,
.half_grid img {
  width: 100%;
  max-width: 100%;
  height: auto;
  object-fit: scale-down;
}

.half_grid_content_left {
  grid-column-start: 1;
  grid-row-start: 1;
  justify-self: center;
  align-self: center;
}

#labour_overlay_grid_left {
  justify-self: start;
}

#how_does_section_left {
  align-self: center;
  justify-content: center;
}

.half_grid_content_right {
  grid-column-start: 2;
  grid-row-start: 1;
  align-self: center;
}

#form_grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(4, auto);
  justify-content: start;
  align-content: center;

  grid-gap: 5%;
}

.longGridItem {
  grid-column: span 2;
}

.formInput label {
  margin-bottom: 5px;
}
::placeholder {
  opacity: 0.5;
}

.inputBlock,
.longInputBlock {
  display: block;
  border: 1px solid #bebae6;
  border-radius: 8px;
  padding: 2.5px;
  padding-left: 5px;
  width: 100%;
  height: 52px;
}

.content_rowBox {
  display: block;
  float: left;
}

.block_display {
  display: block;
}

.style_position {
  display: inline-flex;
}

.content_imgRow {
  display: flex;
  text-align: left;
  align-content: center;
  justify-content: center;
  margin-top: 30px;
  margin-bottom: 30px;
}

.content_imgRow_icon {
  margin-right: 5%;
}

.content_imgRow_text {
  width: 80%;
  height: 100%;
}

.col-split-3 {
  float: left;
  width: 100%;
  max-width: 33%;
  /* flex-shrink: 0; */

  margin-left: auto;
  margin-right: auto;
}

.infoBox-6 {
  position: relative;
  text-align: center;
  width: inherit;
  height: 135px;
  display: inline-block;
}

.infoContent,
.infoContent_alt {
  margin-top: 5rem;
  margin-bottom: 5rem;
}

.infoContent_alt {
  margin-right: 15%;
  margin-left: 10%;
}

.card_box_container {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: repeat(3, 1fr);
}

.card_box_holder {
  background: none;
}

.card_box_holder_white {
  background: #f6f6fd;
  border-radius: 16px;
  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.08),
    0px 10px 25px rgba(0, 0, 0, 0.08);
}

.card_box_holder_header img,
#discover_holder .card_box_holder_header img {
  width: 100%;
  object-fit: cover;
  height: 30%;
}

#discover_holder .card_box_holder_header img {
  border-radius: 16px 16px 0 0;
}

.card_box_holder_body,
#news_body,
#info_body,
#info_body2,
#work_body,
#text_body {
  display: flex;
  flex-direction: column;
  padding: 15px;
}

.card_box_holder_body,
#news_body,
#info_body,
#info_body2,
#work_body,
#text_body {
  text-align: left;
}

#info_body h3,
#info_body2 h3 {
  color: #1d184e;
}

#news_body,
#info_body,
#info_body2,
#work_body,
#text_body {
  padding-left: 0;
}

.hyper_link_duo {
  display: grid;
  text-decoration: none;
  grid-template-columns: 3fr 0.3fr;
  padding-left: 0.5rem;
}

.hyper_link_duo h3,
#news_body h3,
#news_body #news_read_more,
#info_body h3,
#info_body2 h3 {
  font-style: normal;
  font-weight: bold;
}

#news_body h3,
#info_body h3,
#info_body2 h3 {
  color: #1d184e;
}

#news_body #news_read_more,
.hyper_link_duo h3 {
  color: #332a88;
}

#discover_chevron {
  align-self: center;
  justify-self: flex-end;
}

/* Prevent Image Highlight and ghost image*/
.noselect {
  pointer-events: none;
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.left-btn-2,
.right-btn-2 {
  background-size: cover;
  background-repeat: no-repeat;

  width: 30px;
  height: 30px;
  z-index: 5;
  border-radius: 100%;
}

.left-btn-2 {
  background-image: url("../img/compressed-icons/nav-left.png");
}

.right-btn-2 {
  background-image: url("../img/compressed-icons/nav-right.png");
}
/* ... */

